arav agenda overlapping fixed

--- a/styles.css
+++ b/styles.css
@@ -642,6 +642,7 @@ body {
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap%27');
 .header,
 .timeline {
+	clear: both;
 	font-family: 'Lato';
 	box-sizing: border-box;
 }
